--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,31 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+.DS_Store
+.env
+.env.*
+
+# Rust
+/target/
+**/target/
+
+# Node / frontend
+node_modules/
+dist/
+build/
+.vite/
+
+# Tauri artifacts
+src-tauri/target/
+**/src-tauri/target/
+**/src-tauri/gen/
+
+# Python
+__pycache__/
+*.pyc
+.venv/
+venv/
+.pytest_cache/
+.mypy_cache/
+ruff_cache/
