Implement server setup

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,7 @@
     {
       "label": "app: dev",
       "type": "shell",
-      "command": "pnpm tauri dev",
+      "command": "npm run tauri dev",
       "options": { "cwd": "${workspaceFolder}/app" },
       "problemMatcher": []
     },
